projects/ecom-python/infra/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecom-python-route
  namespace: ecom-python
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: default
    sectionName: web
  hostnames:
  - "ecom-python.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ecom-python-api
      port: 8000
